<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <EditText
        android:id="@+id/contaNomeDialog"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/nome_titular"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/contaCpfDialog"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/cpf"
        android:inputType="number" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/contaAgenciaDialog"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/agencia"
            android:inputType="number" />

        <EditText
            android:id="@+id/contaContaDialog"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/conta"
            android:inputType="number" />

        <EditText
            android:id="@+id/contaDigitoDialog"
            android:layout_width="51dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/dig"
            android:inputType="number" />
    </LinearLayout>
</LinearLayout>